# schemats

./: .editorconfig  .eslintignore  .eslintrc  .prettierrc.js  .tool-versions  CHANGELOG.md  examples.txt  package.json  pyproject.toml  test.tql  tsconfig.json
bridge/: ptype-caller.ts  ptype_runner.py
example/: db-types.ts
resources/sql/mysql/: getColumnComments.sql  getEnums.sql  getForeignKeys.sql  getPrimaryKeys.sql  getTable.sql  getTableComments.sql  getTableNames.sql  getTableStatistics.sql
resources/sql/postgres/: getColumnComments.sql  getColumnStatistics.sql  getEnums.sql  getForeignKeys.sql  getPrimaryKeys.sql  getTable.sql  getTableComments.sql
src/: adapter.d.ts  backends.ts  compiler.ts  config.ts  coreference-resolution.ts  coreference.ts  enums.ts  formatters.ts  generator.ts  logger.ts  relationships.ts  schema-interfaces.ts  schema-mysql.ts  schema-postgres.ts  statistics.ts  tables.ts  utils.ts  validators.ts
src/adapters/: mysql-adapter.ts  mysql-database.ts  neo4j-json.ts  postgres-adapter.ts  postgres-database.ts  schema-mysql.ts  schema-postgres.ts  types.ts
src/adapters/mysql/: getColumnComments.sql  getEnums.sql  (+3 more)
src/backends/: ALGEBRAIC_JULIA.md  algebraic-julia.ts  base.ts  hydra.ts  json.ts  julia-genie.ts  julia-octo.ts  julia.ts  python.ts  typedb-loader-config.ts  typedb.ts  typescript.ts
src/lang/: haskell.ts  julia.ts  neo4j.ts  python.ts  typedb-loader-config.ts  typeql.ts  typescript.ts
src/typemaps/: MYSQL.md  POSTGRES.md  julia-typemap.ts  python-typemap.ts  typedb-typemap.ts  types.ts  typescript-typemap.ts
(+10 files in other folders)
