[tool.poetry]
name = "schemats"
version = "0.1.0"
description = "DB Reflection"
authors = ["Sitch <michael.sitchenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ptype = "^0.2.17"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
